--- a/past.css
+++ b/past.css
@@ -4,6 +4,27 @@ body {
 }
 
 img {
-    width: 50%;
+    width: 100%;
     display: block;
+}
+
+table, th, td{
+    border: 2px solid white;
+    border-collapse: collapse;
+}
+th, td {
+    background-color: skyblue;
+}
+
+button{
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
