fixed img that can't load

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 .button {
   background-color: #ffff9d;
-  color: #beeb9f;
+  color: green;
   padding: 20px;
   text-align: center;
   text-decoration: none;
