--- a/future.css
+++ b/future.css
@@ -5,16 +5,18 @@ body {
 
 p {
     color:#ff9d76;
+    font-size: 25px;
 }
 
 h3 {
     color:#ff9d76;
+    font-size: 30px;
 }
 
 img {
     float: left;
     width: 100%;
-    height: 235px;
+    height: 500px;
     object-fit: cover;
 }
 
